<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_safety_pkg</name>
  <version>1.0.0</version>
  <description>Safety layer for Inspire dexterous hand on real robot (PC2)</description>
  <maintainer email="6251913079@stu.jiangnan.edu.cn">ketchup</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>inspire_hand_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
